@@ -86,5 +86,3 @@ global.angular.module('algoliasearch', [])
       }
     };
   }]);
-
-require('../migration-layer/')('algoliasearch.angular');
