@@ -71,5 +71,3 @@ request.delay = function(ms) {
     }, ms);
   }).promise();
 };
-
-require('../migration-layer/')('algoliasearch.jquery');
