@@ -2,6 +2,11 @@ CHANGELOG
 
 UNRELEASED
 
+    * FIX: prepend the migration-layer to the browserify bundle, to
+      avoid the /latest/ + module loader case where the code needed to load V2
+      is not executed
+      It also removes the migration-layer code from the package managers (npm, bower) builds,
+      where it makes no sense to have it
     * FIX: load V2 using a DOMElement when V3 is loaded ASYNCHRONOUSLY with /latest/
       * tested on all majors browsers:
         Chrome stable
